undate  style.css

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .banner {
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(172, 102, 102, 0.404), rgba(0, 0, 0, 0.404)), url('../websmart/bg.jpg');
+    background-image: linear-gradient(rgba(172, 102, 102, 0.404), rgba(0, 0, 0, 0.404)), url('https://www.papagroup.ru/upload/medialibrary/3bc/6.jpg');
     background-size: cover;
     background-position: center;
 }
