--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .banner {
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0, 214, 221, 0.404), rgba(15, 160, 136, 0.404)), url('https://www.papagroup.ru/upload/medialibrary/3bc/6.jpg');
+    background-image: linear-gradient(rgba(0, 214, 221, 0.404), rgba(15, 160, 136, 0.404)), url('https://seoslim.ru/wp-content/uploads/2020/12/2020-12-05_23-32-34.jpg');
     background-size: cover;
     background-position: center;
 }
